--- a/MyMvp/app/src/main/res/layout/activity_main.xml
+++ b/MyMvp/app/src/main/res/layout/activity_main.xml
@@ -17,4 +17,11 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <com.android.advertisement.adslibrary.AdvertisementView
+        android:layout_width="match_parent"
+        android:layout_height="208dp"
+        app:layout_constraintTop_toBottomOf="@id/return_value_name"
+
+        ></com.android.advertisement.adslibrary.AdvertisementView>
+
 </android.support.constraint.ConstraintLayout>
