--- a/MyMvp/app/src/main/res/layout/activity_main.xml
+++ b/MyMvp/app/src/main/res/layout/activity_main.xml
@@ -12,16 +12,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
     <com.android.advertisement.adslibrary.AdvertisementView
+        android:id="@+id/view_ads"
         android:layout_width="match_parent"
         android:layout_height="208dp"
+        app:layout_constraintBottom_toTopOf="@+id/context_fragment"
         app:layout_constraintTop_toBottomOf="@id/return_value_name"
-
         ></com.android.advertisement.adslibrary.AdvertisementView>
+
+    <FrameLayout
+        android:id="@+id/context_fragment"
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        android:background="#aaaaff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_ads"
+        ></FrameLayout>
+
 
 </android.support.constraint.ConstraintLayout>
